--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
-remote_theme: hexo-theme-landscape
+remote_theme: hexojs/hexo-theme-landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
