--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ ignore:
 ## Themes: https://hexo.io/themes/
 # theme: landscape
 remote_theme: hexojs/hexo-theme-landscape
+favicon: favicon.png
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
