--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,8 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-# theme: landscape
-remote_theme: hexojs/hexo-theme-landscape
+theme: landscape
+# remote_theme: hexojs/hexo-theme-landscape
 favicon: favicon.png
 
 # Deployment
